Fix images src bug

--- a/responsive/my-team-page/index.html
+++ b/responsive/my-team-page/index.html
@@ -42,7 +42,7 @@
       <main class="grid">
         <div class="person-card">
           <img
-            src="../assets/photo1.png"
+            src="./assets/photo1.png"
             alt="Bill Mahoney"
             class="person-card__image"
           />
@@ -51,7 +51,7 @@
         </div>
         <div class="person-card">
           <img
-            src="../assets/photo2.png"
+            src="./assets/photo2.png"
             alt="Saba Cabrera"
             class="person-card__image"
           />
@@ -60,7 +60,7 @@
         </div>
         <div class="person-card">
           <img
-            src="../assets/photo3.png"
+            src="./assets/photo3.png"
             alt="Shae Le"
             class="person-card__image"
           />
@@ -69,7 +69,7 @@
         </div>
         <div class="person-card">
           <img
-            src="../assets/photo4.png"
+            src="./assets/photo4.png"
             alt="Skylah Lu"
             class="person-card__image"
           />
@@ -78,7 +78,7 @@
         </div>
         <div class="person-card">
           <img
-            src="../assets/photo5.png"
+            src="./assets/photo5.png"
             alt="Griff Richards"
             class="person-card__image"
           />
@@ -87,7 +87,7 @@
         </div>
         <div class="person-card">
           <img
-            src="../assets/photo6.png"
+            src="./assets/photo6.png"
             alt="Stan John"
             class="person-card__image"
           />
